--- a/.editorconfig
+++ b/.editorconfig
@@ -5,8 +5,11 @@ root = true
 charset = utf-8
 indent_style = space
 indent_size = 2
+tab_width = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
+end_of_line = crlf
+max_line_length = 120
 
 [*.ts]
 quote_type = single
